feat: reformulando painel de administrador + ajustes necessários no backend + alteração de rotas de pasta no front